test/asm/union-in-rom.asm
SECTION "test", ROM0
UNION
ENDU
